fix(ui): prevent sidebar edge clipping off-screen

--- a/module/scss/ui-naggaroth.scss
+++ b/module/scss/ui-naggaroth.scss
@@ -29,6 +29,9 @@
 		content: url("../ui/khaine.webp");
 	}
 
+	#ui-right {
+		width: initial;
+	}
 
 	#sidebar {
 		background: url("../ui/sidebar.webp") repeat;
